New declaration of lists